worked a bit on mobile view on master

--- a/code/index.html
+++ b/code/index.html
@@ -33,30 +33,33 @@
 
 <!--- End of hero section -->
 
+<!-- The big news content -->
   <section class="big-mama-news">
-      <!-- The big news content -->
       <figure class="big-news-baby">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
+      </figure>
+  </section>
+
+  <section class="small-mama-news">
+<figure class="small-news-baby"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+</figure>
+      <figure class="small-news-baby"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+      <figure class="small-news-baby"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+      <figure class="small-news-baby"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+      <figure class="small-news-baby"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+      <figure class="small-news-baby"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
+    <figure class="small-news-baby"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+    <figure class="small-news-baby grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
         </figure>
-      <figure class="big-news-baby"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </figure>
-    <figure class="big-news-baby"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+    <figure class="small-news-baby grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
         </figure>
-    <figure class="big-news-baby grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
-        </figure>
-    <figure class="big-news-baby grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
-        </figure>
-    <figure class="big-news-baby"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+    <figure class="small-news-baby"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
      </figure>
   </section>
 
