--- a/code/index.html
+++ b/code/index.html
@@ -5,16 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- dont forget the meta tag for responsiveness -->
   </head>
 
   <body>
     <header>
       <div class="website-header">
+        <div class="logo"> <img src="../images/logo2.png" alt="" srcset=""></div>
         <!--<img src="/project-news-site/images/logo.png" alt="Logo-header" />-->
         <nav class="navbar">
           <h1>TMB News</h1>
-          <ul>
+          <ul class="menu">
             <li><a href="#">Latest</a></li>
             <li><a href="#">Politics</a></li>
             <li><a href="#">Economy</a></li>
@@ -34,8 +37,8 @@
         alt="Main article"
       />
       <h2>
-        BREAKING: The UK counts down to its first ever orbital satellite launch
-        (Update: the mission failed)
+        BREAKING: The UK counts down to its first ever orbital satellite launch!
+        (Update: the mission failed 💔)
       </h2>
 
       <p>The first ever orbital satellite launch from the UK — and Europe — was set for takeoff on Monday, January 9. The so-called “Start Me UP” mission, led by US-based Virgin Orbit, set out from Spaceport Cornwall at Newquay Airport at around 21:15 UTC.
@@ -43,6 +46,8 @@
       At the center of the mission was a modified Boeing 747 aircraft, the Cosmic Girl, fitted with Virgin Orbit’s Launcher One rocket, which was carrying nine civil and defense satellites.
         
       Interested viewers who watched the launch via Virgin Orbit’s livestream below were faced with disappointment: the mission failed.</p>
+
+      <h3>READ MORE</h3>
 
       <!-- The big news content -->
     </section>
@@ -52,56 +57,71 @@
         <div class="grid-image">
         <img src="../images/image1.jpg" alt=""> </div>
         <div class="grid-text"> <h3>Local</h3>
-      <p>Firecrackers, firecrackers, firecrackers!<p></div>
+      <p>Having bad taste in music is soon to be illegal.<p></div>
       </div>
       <div class="grid-item">
-        <img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-1-3.jpg&signature=d3f113d295e31c071c9a958bd1fd08de" alt="">
+        <img src="../images/image2.jpg" alt="">
         <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p>
+        <p>Inflation is a blessing in disguise. Here's why!</p>
       </div>
       <div class="grid-item">
-        <img       src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2Fheader-image-evernote-acquired.jpg&signature=d40d85795c0cf9d4ac0127e2d3fa78e1" alt="">
+        <img src="../images/image3.jpg" alt="">
         <h3>Europe</h3>
-        <p>War, war, war!</p>
+        <p>Free money for everyone!</p>
       </div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FCam_03_UPDATE.jpg&signature=990058daec0f5e750b48a7987c3b594a" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p>
+      <div class="grid-item">
+        <img src="../images/image4.jpg" alt="">
+        <h3>Local</h3>
+        <p>Cars to be banned starting from february 2023.</p>
       </div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-97-7.jpg&signature=8a91c426773cb9181ae8830dc0cd7779" alt="">
+      <div class="grid-item">
+        <img src="../images/image5.jpg" alt="">
+        <h3>Technology</h3>
+        <p>Now you can start growing your own mobile device. Here's how!</p></div>
+      <div class="grid-item">
+        <img src="../images/image6.jpg" alt="">
         <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p></div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design.jpg&signature=7e623c83d951195024435fb9bc776133" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p></div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=432%2C244&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97.jpg&signature=cdafade74c20087ea6e502073b5be8d5" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p></div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-2-3.jpg&signature=d29d603f15159e87436481a8f6f514e4" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p></div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-1.jpg&signature=da3bd34e28b2a052d0d5ed7d0965d8d3" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p>
+        <p>Cars to be replaced by skating boards and rollerblades. Click for tips!</p></div>
+      <div class="grid-item">
+        <img src="../images/image7.jpg" alt="">
+        <h3>Europe</h3>
+        <p>War is over, forever 🌍</p></div>
+      <div class="grid-item">
+        <img src="../images/image8.jpg" alt="">
+        <h3>Europe</h3>
+        <p>Who is your favorite "self-made" billionaire?</p></div>
+      <div class="grid-item">
+        <img src="../images/image9.jpg" alt="">
+        <h3>Local</h3>
+        <p>10 cups of coffe is the answer to a good night sleep.</p>
       </div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2Fsmart-glasses.jpeg&signature=9e52f486df2c9b66d04c01a2f8944eef" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p>
+      <div class="grid-item">
+        <img src="../images/image10.jpg" alt="">
+        <h3>Europe</h3>
+        <p>Fast fashion totally does not destroy nature. <br>Plastic is indeed fantastic 💗</p>
       </div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2022%2F12%2FUntitled-design-3-2.jpg&signature=5090db90f5a7c34b1d4ac23b1418124e" alt="">
-        <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p>
+      <div class="grid-item">
+        <img src="../images/image11.jpg" alt="">
+        <h3>Europe</h3>
+        <p>Slow news day, what is your favorite chips flavor?</p>
       </div>
-      <div class="grid-item"><img src="https://img-cdn.tnwcdn.com/image?fit=280%2C158&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2023%2F01%2FUntitled-design-97-1.jpg&signature=a7f3a92b8312176663a392577f5d0112" alt="">
+      <div class="grid-item">
+        <img src="../images/image12.jpg" alt="">
         <h3>Economy</h3>
-        <p>Inflation, inflation, inflation!</p></div>
+        <p>Photoshoot-ready shipping containers. Book today!</p></div>
       <!-- The other news  -->
     </section>
   </body>
   <footer>
     <section class="website-footer">
-<h4>Get the TNW newsletter
-  Getting to the heart of the European tech and startup scene. <br> Source: Trust me bro!</h4>
+      <h4>Get the TMB newsletter!<br><br>
+          Getting to the heart of totally real news. <br> Source: Trust me bro!
+      </h4>
+      <div class="email">
+        <input type="email" placeholder="Email">
+        <i class="fa fa-envelope"></i>
+        <button type="submit">Subscribe</button>
+      </div>
 
     </section>
   </footer>
