--- a/code/index.html
+++ b/code/index.html
@@ -23,7 +23,7 @@
         </nav>
     </section>
   </header>
-<!--News-section of the page-->
+<!--Major News-->
 <section class="news-grid">
   <div class="news-card big-card">
     <a href="#"><article>
@@ -34,6 +34,7 @@
       </div>
     </article></a>
   </div>
+  <!--Other news-->
   <div class="news-card small-card">
     <a href="#"><article>
       <img src="./Balloons.jpg" alt="Balloons" style="width:100%;height:70%">
