--- a/code/index.html
+++ b/code/index.html
@@ -55,59 +55,57 @@
     <section class="grid-parent">
       <div class="grid-item">
         <div class="grid-image">
-        <img src="../images/image1.jpg" alt=""> </div>
+          <a href="https://imgbb.com/"><img src="https://i.ibb.co/gdjxKXQ/image1.jpg" alt="image1" border="0"></a> </div>
         <div class="grid-text"> <h3>Local</h3>
       <p>Having bad taste in music is soon to be illegal.<p></div>
       </div>
       <div class="grid-item">
-        <img src="../images/image2.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/TB9xVSQ/image2.jpg" alt="image2" border="0"></a>
         <h3>Economy</h3>
         <p>Inflation is a blessing in disguise. Here's why!</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image3.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/GPb7QCG/image3.jpg" alt="image3" border="0"></a>
         <h3>Europe</h3>
         <p>Free money for everyone!</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image4.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/bvjf7vn/image4.jpg" alt="image4" border="0"></a>
         <h3>Local</h3>
         <p>Cars to be banned starting from february 2023.</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image5.jpg" alt="">
-        <h3>Technology</h3>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/MnLCrDS/image5.jpg" alt="image5" border="0"></a>        <h3>Technology</h3>
         <p>Now you can start growing your own mobile device. Here's how!</p></div>
       <div class="grid-item">
-        <img src="../images/image6.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/3dSxMg4/image6.jpg" alt="image6" border="0"></a>
         <h3>Economy</h3>
         <p>Cars to be replaced by skating boards and rollerblades. Click for tips!</p></div>
       <div class="grid-item">
-        <img src="../images/image7.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/jMM4W90/image7.jpg" alt="image7" border="0"></a>
         <h3>Europe</h3>
         <p>War is over, forever 🌍</p></div>
       <div class="grid-item">
-        <img src="../images/image8.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/Hqghthv/image8.jpg" alt="image8" border="0"></a>
         <h3>Europe</h3>
         <p>Who is your favorite "self-made" billionaire?</p></div>
       <div class="grid-item">
-        <img src="../images/image9.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/nsVdqzG/image9.jpg" alt="image9" border="0"></a>
         <h3>Local</h3>
         <p>10 cups of coffe is the answer to a good night sleep.</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image10.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/DkK2qnF/image10.jpg" alt="image10" border="0"></a>
         <h3>Europe</h3>
         <p>Fast fashion totally does not destroy nature. <br>Plastic is indeed fantastic 💗</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image11.jpg" alt="">
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/0M3mphS/image11.jpg" alt="image11" border="0"></a>
         <h3>Europe</h3>
         <p>Slow news day, what is your favorite chips flavor?</p>
       </div>
       <div class="grid-item">
-        <img src="../images/image12.jpg" alt="">
-        <h3>Economy</h3>
+        <a href="https://imgbb.com/"><img src="https://i.ibb.co/PQ1kT38/image12.jpg" alt="image12" border="0"></a>        <h3>Economy</h3>
         <p>Photoshoot-ready shipping containers. Book today!</p></div>
       <!-- The other news  -->
     </section>
