--- a/code/readmore.html
+++ b/code/readmore.html
@@ -4,6 +4,7 @@
   <head>
 
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Heuristics of neurodesign </title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"> 
