--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,80 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+<html lang="en">
+    <head>
+<meta charset="UTF-8" >
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Project 2: News site</title>
+    <link rel="stylesheet" type="text/CSS" href="style.css" />
+</head>
+<body>
+<img src="logo.svg" class="logo"><br/>
+<nav class="navigation">
+        <li><a href="index.html">SKYDIVE</a></li>
+        <li><a href="index.html">EVENTS</a></li>
+        <li><a href="index.html">SWEDEN</a></li>
+        <li><a href="index.html">CONTACT</a></li>
+</nav>
+</div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+<!--Big news-->
+<div class="wrapper"> 
+  <h1>ALL ABOUT SKYDIVING</h1>
+   <h2>News and updates every month</h2>
+</div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+<section class="grid-2">
+  <div class="news-image">
+  </div>
+    <div class="news">
+        <h3>WELCOME 2023 - JANUARY</h3>
+        <p>It’s 2023 and the Skydiving community is upp and running as normal in the south of Europe.</p>
+            <p>Due to weather being uneasy during December month, a lot of camps and courses for beginners will continue in January and February month.</p>
+            <p>Skydive SPAIN had a successfull XMAS BOOGIE with over 200 people! They broke theire record for amount of jumps during one day</p>
+            <p>and it was a real hit for all the fun-jumpers! Skydive ALGARVE had a great turnout of their NEW YEARS party with fireworks close to the bar, live DJ:s under the stars</p>
+            <p>and people visiting from all over just to welcome the new year.</p>
+            <p>This is a period where most Dropzones are in the plannings for the season whilst others continue with both AFF-courses, camps and so forth.
+            For those in northern Europe the focus during this period is mostly tunnel-flying. Both in Sweden and in Poland some top coaches from around the world are available for coaching
+            So be on the look-out for coaching, you will find updateed info down below under ‘AFF / TUNNEL’.</p>
+    </div>
+</section>      
+
+ <!----Smaller news letters--->
+<section class="grid-1">
+    <div class="item-1">
+        <h4>LEARN TO SKYDIVE</h4>
+        <img src="https://images.pexels.com/photos/10646791/pexels-photo-10646791.jpeg?auto=compress&cs=tinysrgb&w=800" class="grid-1-img">
+        <p>Bodyflight Sweden has ongoing coaches from around the world for some tunnel and freefly practice!
+            Tunnel Poland will have specifik dates for global coaches, make sure to reach out to the local tunnel for bookings.</p>
+            <p>AFF is up and running in Skydive Spain. Dates for northern Euorpe will be released during March. [...]</p>
+    </div>
+
+  <div class="item-2">
+        <h4>EUROPE SKYDIVE</h4>
+        <img src="https://images.pexels.com/photos/346885/pexels-photo-346885.jpeg?auto=compress&cs=tinysrgb&w=800" class="grid-1-img">
+        <p>For us Europeans winter destinations are highly popular way to continue Skydiving. It's even common to start your AFF journey at
+        Skydive SPAIN as well as Skydive Portugal. Summer season starts in northern Europe in April, courses, events and jump-friendly DZ will be posted on this website. Stay tunned![...]</p>
+  </div>
+
+  <div class="item-3">
+        <h4>LOCAL DROPZONES</h4>
+        <img src="https://images.pexels.com/photos/609771/pexels-photo-609771.jpeg?auto=compress&cs=tinysrgb&w=800" class="grid-1-img-club">
+        <p>Depending on your location there will most likely be a local Dropzone near by! 
+        Under ‘MAPS’ you can find locations for Dropzones who are active up to date and located in Europe.
+        Click <a href=“https://fallskarmscenter.se”>here</a> for a few of Swedens locations. Events and updates will appear closer to April.[...]</p>
+  </div>
+
+
+  <div class="item-4">
+        <h4>CANOPY COURSE</h4>
+        <img src="https://images.pexels.com/photos/13802101/pexels-photo-13802101.jpeg?auto=compress&cs=tinysrgb&w=800" class="grid-1-img">
+        <p>Canopy courses will start in Skydive SPAIN, February month. For northern Europe dates will be released closer to March/April.
+          To get more recent information in particular Dropzone make sure to contact theme directly. Recommendation for those who are looking for courses
+        check out Skydive Spain website - click <a href=“https://www.skydivespain.com”>here</a> [...]</p>
+        
+  </div>
+</section>
+<footer><p>skydive for everyone</p>
+</footer>
+</body>
 </html>
