--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2: The News Site</title>
+    <title>Flower news</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- the meta tag for responsiveness -->
   </head>
