aded some br in desktoptext

--- a/code/index.html
+++ b/code/index.html
@@ -24,13 +24,13 @@
      <div>
       <section class="grid-parent">
         <div class="grid-item big-news-grid">
-          <img class="bignewspicture" src="/pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
+          <img class="bignewspicture" src="./pictures/greenpines.jpeg" alt="Green pines from above" title="green-pines">
             <div class="bignewstext">
               <article>
                 <h1>This is a beautiful tree.</h1>
-                <p class="bignewstext">The quote commes from Gus Palmer, Head of KFT (Kentucky Free Tree) 
-                when seeing pictures of the newly found micropine near the southern limit of the Sierra Madre 
-                Occidental mountain range in northwestern and western Mexico.</p>
+                <p class="bignewstext">The quote commes from Gus Palmer, Head of KFT<br> (Kentucky Free Tree) 
+                when seeing pictures of the<br> newly found micropine near the southern limit of<br> the Sierra Madre 
+                Occidental mountain range in<br> northwestern and western Mexico.</p>
                 <br>
                 <button><a href="https://en.wikipedia.org/wiki/Sierra_Madre_Occidental">Read article</a></button>
              </article>
