imporved nav-list

--- a/code/index.html
+++ b/code/index.html
@@ -15,16 +15,18 @@
   <body>
     
     <header> 
-      <div class="header-title">
+      <div class="title">
       <h1>Finer things <span style="font-family: 'Satisfy', cursive;">club</span> </h1>
       <h5>Est 2007 Scranton Pen.</h5>
       </div>
 
       <nav>
-        <a href="">Fashion</a> 
-        <a href="">Travels</a> 
-        <a href="">Recipes</a> 
-        <a href="">Blog</a> 
+        <ul class="nav-list">
+        <li class="nav-item"><a href="">Fashion</a></li>
+        <li class="nav-item"><a href="">Travels</a></li>
+        <li class="nav-item"><a href="">Recipes</a></li>
+        <li class="nav-item"><a href="">Blog</a></li>
+      </ul>
       </nav>
     </header>
 
