last stuff added

--- a/code/index.html
+++ b/code/index.html
@@ -11,25 +11,26 @@
     <header>
       <!--LOGO-->
       <header class="header">
-
+        <img src="ct-logo.png" alt="ct-logo">
         <h1>THE CODE TIMES</h1>
-
+      </header>
+      
         <!--Menu-->
         <div class="menu">  
-            <h2>TECHNIGO</h2>
-            <h2>TJEJER KODAR</h2>
-            <h2>GITHUB</h2>
-            <h2>SLACK</h2>
-            <h2>STACK OVERFLOW</h2>
+            <a href="https://www.technigo.io/">TECHNIGO</a>
+            <a href="https://tjejerkodar.se/">TJEJER KODAR</a>
+            <a href="https://github.com/">GITHUB</a>
+            <a href="https://slack.com/">SLACK</a>
+            <a href="https://stackoverflow.com/">STACK OVERFLOW</a>
         </div>
-    </header>
+  
 
    <!--Breaking news-->
    <div class="breaking-news">
       <img src="champion.jpg" alt="Picture of the champion"/>
       <div class="text-container">
         <h3>Breaking News</h3>
-        <p class="breaking-news-text">New coding champion breaks all records... Experts say they have never seen coding at this lever before. This coder is predicted to go far.</p>
+        <p class="breaking-news-text">New coding champion breaks all records... Experts say they have never seen coding at this level before. This coder is predicted to go far.</p>
       </div>
     </div>
 
@@ -47,12 +48,12 @@
 
       <div class="newsbox 3">
           <h4>Ecodemy</h4>
-          <p>Coders all over the worls are right now scruggeling with the code inflation...</p>
+          <p>Coders all over the world are right now struggling with the code inflation...</p>
       </div> 
 
       <div class="newsbox 4">
           <h4>Codeterior</h4>
-          <p>Read about the newest trends in styling your home with coding. The 5 best ways to in a easy way style your code...</p>
+          <p>Read about the newest trends in styling your home with coding. The 5 best ways to in an easy way style your coding home...</p>
       </div> 
 
       <div class="newsbox 5">
@@ -67,7 +68,7 @@
 
       <div class="newsbox 7">
         <h4>Missing</h4>
-        <p>Reports have come in all over the world regarding missing codes. Codelice say they have never had missing reports comming in in this scale before.</p>
+        <p>Reports have come in all over the world regarding missing codes. Codelice say they have never had missing reports comming in at this scale before.</p>
     </div> 
 
     <div class="newsbox 8">
@@ -76,5 +77,9 @@
   </div> 
 
   </div>
+
+  <footer>
+    © 2023 | TBL AB @ The Code Times | Contact: tbrannberglendt@gmail.com 
+  </footer>
   </body>
 </html>
