added a br to the widget

--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,7 @@
      </div> 
 <!-- Here´s a Weather widget for Alabama  -->
      <div id="ww_62cfd9753fdfb" v='1.3' loc='id' a='{"t":"ticker","lang":"en","sl_lpl":1,"ids":["wl1558"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#fbcc33","cl_font":"#000000","cl_cloud":"#000000","cl_persp":"#000000","cl_sun":"#000000","cl_moon":"#000000","cl_thund":"#000000"}'>Weather Data Source: <a href="https://sharpweather.com/weather_alabama/" id="ww_62cfd9753fdfb_u" target="_blank">Alabama weather forecast</a>
-    </div><script async src="https://app1.weatherwidget.org/js/?id=ww_62cfd9753fdfb"></script>
+    </div>git<script async src="https://app1.weatherwidget.org/js/?id=ww_62cfd9753fdfb"></script><br>
 <!-- Here´s more news(cards)  -->
         <div class="grid-item more-news-grid"><img class="more-news-picture" src="/pictures/trafficlights.jpg" alt="Trafficlights in the night">
           <h2><a href="https://www.shmoop.com/drivers-ed/alabama/traffic-lights-and-signals.html">Accedents due to broken traffic-lights along E75.</a></h2>
