--- a/code/index.html
+++ b/code/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!-- the meta tag for responsiveness -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower news</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- the meta tag for responsiveness -->
+    
   </head>
+
   <body>
+    <!--this is the flexbox header with a flower icon logo and the navbar-->
     <div class="header">
       <img src="flowericon.png" class="icon">
       <div class="header-right">
@@ -22,7 +25,8 @@
           <h1>Flower News</h1>
       </div>
   </div>
-
+  
+  <!--this is the grid container with the main news item and the news cards plus footer-->
   <section class="container">
 
       <div class="main">
