--- a/code/index.html
+++ b/code/index.html
@@ -18,12 +18,12 @@
             <a href="http://www.google.com">SEARCH</a>
             <a href="mailto:pererikandreas@gmail.com">CONTACT</a>
             </nav>
-            <br style="clear: both;" />
             <div class="widget-top">
-             <hr>
-<!-- Here´s a Weather widget fort Tablet and Desktop -->    
+             <hr><br>
+<!-- Here´s a Weather widget -->    
              <div id="ww_62cfd9753fdfb" v='1.3' loc='id' a='{"t":"ticker","lang":"en","sl_lpl":1,"ids":["wl1558"],"font":"Arial","sl_ics":"one","sl_sot":"celsius","cl_bkg":"#fbcc33","cl_font":"#000000","cl_cloud":"#000000","cl_persp":"#000000","cl_sun":"#000000","cl_moon":"#000000","cl_thund":"#000000"}'>Weather Data Source: <a href="https://sharpweather.com/weather_alabama/" id="ww_62cfd9753fdfb_u" target="_blank">Alabama weather forecast</a>
             </div><script async src="https://app1.weatherwidget.org/js/?id=ww_62cfd9753fdfb"></script><br>
+            <br style="clear: both;" />
         </div>
       </header>
 <!-- Here´s the big news content -->
