added all pictures, trying to figure out flex layout

--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <section class="title-page">
+      <section class="title-header">
         <div class="title">Cats and Tats</div>
         <div class="logo-container">
           <img src="logo.svg" alt="logo for site">
@@ -18,30 +18,43 @@
             <li><a href="default.asp">Home</a></li>
             <li><a href="news.asp">News</a></li>
             <li><a href="media.asp">Media</a></li>
-            <li><a href="about.asp">About</a></li>
           </ul>
       </section>
     </header>
 
     <section class="big-news">
-       <div class="main-story">
-        <h2>Cat Attack!</h2>
-       </div>
-       <div class="main-story-text">
+       <div class="cats">
+        <img class="cat-image" src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-416160.jpg" alt="Cat Picture main story"/>
+       </div>  
+      <h1>Cat Attack!</h1>
           <p1> I thought I'd be able to put my own pictures in here, but it turns out that would be really difficult I think! So we're doing this instead. Hopefully there are stock images of both cats and tattoos or else my web page name makes no sense!</p1> 
-       </div>
     </section>
 
     <section class="small-news">
-      <div class="article-one">Here's a Tattoo</div>
-      <div class="article-two">Here's a cat too!</div>
-      <div class="article-three">More tats!</div>
-      <div class="article-four">More cats!</div>
-      <div class="article-five">Cats</div>
-      <div class="article-six">Tats</div>
-      <div class="article-seven">Little Kitty Cat</div>
-      <div class="article-eight">Finally, Tattoos</div>
-      <!-- The other news  -->
+      <div class="article-one">Here's a Tattoo
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-ralph-rabago-3214690.jpg" alt="first tat article">
+      </div>
+      <div class="article-two">Here's a cat too!
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-208984.jpg" alt="first cat article">
+      </div>
+      <div class="article-three">More tats!
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-tim-samuel-5845304.jpg" alt="second tat article">
+      </div>
+      <div class="article-four">More cats!
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-pixabay-45170.jpg" alt="second cat article">
+      </div>
+      <div class="article-five">Tats
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-lil-artsy-1461816.jpg" alt="third tat article">
+      </div>
+      <div class="article-six">Cats
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-katarzyna-modrzejewska-1314550.jpg" alt="third cat article">
+      </div>
+      <div class="article-seven">Finally, Tattoos
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-kevin-bidwell-2183131.jpg" alt="fourth tat article">
+      </div>
+      <div class="article-eight">Little Kitty Cat
+        <img src="C:\Users\oscar\OneDrive\Desktop\technigo-projects\project-news-site\code\Images\pexels-cats-coming-1605481.jpg" alt="fourth cat article">
+      </div>
     </section>
   </body>
 </html>
