removed the big-news-baby-tag

--- a/code/index.html
+++ b/code/index.html
@@ -35,10 +35,8 @@
 
 <!-- The big news content -->
   <section class="big-mama-news">
-      <div class="big-news-baby">
         <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
-      </div>
+        <p class="big-news-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
 
   <section class="small-mama-news">
