Added content to index.html

--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,800" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>My first web page</title>
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
+    <div class="header">
+      <div class="inner-header">
+          <div class="logo-container">
+              <h1>GOOD<span>NEWS!</span></h1>
+          </div>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+          <ul class="navigation">
+              <a href=""><li>Home</li></a>
+              <a href=""><li>About</li></a>
+              <a href=""><li>Contact</li></a>
+          </ul>
+      </div>
+  </div>
+  <div class="container">
+      <div class="box1">
+          <div class="box-image bg-1"></div>
+          <h2>A Star Nursery That Fuels the Formation of New Stars is Seen by VISTA Telescope in Chile</h2>
+          <p>Science</p>
+          <a href="">READ MORE</a>
+      </div>
+      <div class="box2">
+          <div class="box-image bg-2"></div>
+          <h2>British Company Develops First Tractor in the World to be Completely Powered by Cow Dung</h2>
+          <p>Business</p>
+          <a href="">READ MORE</a>
+       </div>
+  </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+  <div class="grid">
+      <div class="border">Your space to get all your good news for the day!</div>
+      <div class="article1">
+          <a href="">
+          <img src="./Images/Brain.jpg">
+          <h2>Vaccine that Could Cure and Even Prevent Brain Cancer Developed by Scientists</h2>
+          <p>Health</p>
+          </a>
+      </div>
+      <div class="article2">
+          <a href="">
+          <img src="./Images/Eagle.jpg">
+          <h2>How Successful Has the Endangered Species Act Been in its 5 Decades of Protection? Hint: It’s Very Good News</h2>
+          <p>USA</p>
+      </a>
+      </div>
+      <div class="article3">
+          <a href="">
+          <img src="./Images/Bus.jpg">
+          <h2>Bus Stops in Scotland Go Green – With Roofs Covered in Plants as a Gift For Honeybees</h2>
+          <p>World</p>
+      </a>
+      </div>
+  </div>
   </body>
 </html>
