--- a/code/index.html
+++ b/code/index.html
@@ -40,24 +40,24 @@
   </section>
 
   <section class="small-mama-news">
-<div class="small-news-baby"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
+<div class="small-mama-news"> <img src="/project-news-site/assets/blackboston.jpg" class="grid__img" alt="">
 </div>
-      <div class="small-news-baby"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/blinkingpuppy.jpg" class="grid__img" alt="">
         </div>
-      <div class="small-news-baby"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogbomberjacket.jpg" class="grid__img" alt="">
         </div>
-      <div class="small-news-baby"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogwithhat.jpg" class="grid__img" alt="">
         </div>
-      <div class="small-news-baby"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/dogfood.jpg" class="grid__img" alt="">
         </div>
-      <div class="small-news-baby"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </div>
-    <div class="small-news-baby"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+      <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-amy-mccormack-5463180.jpg" alt=""> </div>
+    <div class="small-mama-news"> <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
         </div>
-    <div class="small-news-baby grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
+    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/taxmedtröja.jpg" class="grid__img" alt="">
         </div>
-    <div class="small-news-baby grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
+    <div class="small-mama-news grid-item"> <img src="/project-news-site/assets/unicorndog.jpg" class="grid__img" alt="">
         </div>
-    <div class="small-news-baby"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
+    <div class="small-mama-news"> <img src="/project-news-site/assets/winteriscoming.jpg" class="grid__img" alt="">
      </div>
   </section>
 
