Add div to footer, fix grid row in other news

--- a/code/index.html
+++ b/code/index.html
@@ -149,7 +149,6 @@
         </div>
       </section>
       <section class="other-news">
-        <h2>Reviews of Training</h2>
         <!-- The other news  -->
         <!-- On desktop-sized screens: four cards in a row, 
          On tablets: two in a row, 
@@ -157,6 +156,7 @@
         <div class="grid-parent-other-news">
           <div class="grid-child-other-news paragraph-grid-item">
             <div class="other-news-paragraph">
+              <h3>Reviews of Training</h3>
               <div class="grid-child-other-news medium-grid-item">
                 <div class="img-other-news-div">
                   <div class="card">
@@ -269,34 +269,36 @@
       </section>
     </div>
     <footer>
-      <div class="logo-footer">
-        <img
-          src="../img/a_cat.jpg"
-          alt="Logo, black cat"
-          title="Logo, black cat"
-        />
-        <span class="logoTextSpan">Michelle Wegler 2023</span>
-      </div>
-      <div class="flex-parent">
-        <div class="flex-child">
-          <a
-            href="https://www.linkedin.com/in/michellewegler/"
-            title="Linkedin Profile"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
-            ><span class="sr-only">Linkedin</span></a
-          >
+      <div class="footer">
+        <div class="logo-footer">
+          <img
+            src="../img/a_cat.jpg"
+            alt="Logo, black cat"
+            title="Logo, black cat"
+          />
+          <span class="logoTextSpan">Michelle Wegler 2023</span>
         </div>
-        <div class="flex-child">
-          <a
-            href="https://github.com/smirrebinx/Responsive-Portfolio.git"
-            title="Github Profile"
-            target="_blank"
-            rel="noopener noreferrer"
-            ><i class="fab fa-github" aria-hidden="true"></i
-            ><span class="sr-only">Github</span></a
-          >
+        <div class="flex-parent">
+          <div class="flex-child">
+            <a
+              href="https://www.linkedin.com/in/michellewegler/"
+              title="Linkedin Profile"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fa-brands fa-linkedin" aria-hidden="true"></i
+              ><span class="sr-only">Linkedin</span></a
+            >
+          </div>
+          <div class="flex-child">
+            <a
+              href="https://github.com/smirrebinx/Responsive-Portfolio.git"
+              title="Github Profile"
+              target="_blank"
+              rel="noopener noreferrer"
+              ><i class="fab fa-github" aria-hidden="true"></i
+              ><span class="sr-only">Github</span></a
+            >
+          </div>
         </div>
       </div>
     </footer>
