added comments in the code for sections

--- a/code/index.html
+++ b/code/index.html
@@ -35,7 +35,7 @@
 
 <!-- The big news content -->
   <section class="big-mama-news">
-        <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="grid__img" alt="">
+        <img src="/project-news-site/assets/pexels-lumn-406014.jpg" class="big-news-img" alt="">
         <p class="big-news-text"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, optio porro sint ea aliquid vitae eos doloribus ut consectetur, enim vel, dolores molestias pariatur distinctio a. Aut deleniti tenetur dolor?</p>
   </section>
 
